CUI-16 - Fix icon alignment... Not sure why, but 1.385 causes clipping now

--- a/source/less/base/icons.less
+++ b/source/less/base/icons.less
@@ -32,7 +32,7 @@
     display: inline-block;
     text-decoration: none; // Don't let icons underline
     text-rendering: optimizeLegibility;
-    line-height: 1.385; // The truth, the way. Don't question it.
+    line-height: 1.2; //line-height: 1.385; // The truth, the way. Don't question it.
 
     color: @icon-color;
     opacity: @icon-opacity;
